--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -55,21 +55,26 @@ p {
   font-size: 24px;
 }
 
-.about-page {
+.content-page {
   padding: 160px 20px;
 }
 
-.about-page h1 {
+.content-page h1 {
   font-size: 64px;
   line-height: 80px;
 }
 
-.about-page h2 {
+.content-page h2 {
   font-size: 18px;
   font-family: var(--default-font-family);
 }
+.content-page h3 {
+  font-size: 24px;
+  line-height: 1.5;
+  font-family: var(--default-font-family);
+}
 
-.about-page-content {
+.content {
   margin: 30px;
 }
 
@@ -109,7 +114,7 @@ p {
     padding: 80px 20px;
   }
 
-  .about-page {
+  .content-page {
     text-align: center;
     padding: 0;
   }
